--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,12 @@ python-xapp (1.8.0) tricia; urgency=medium
 
  -- Clement Lefebvre <root@linuxmint.com>  Tue, 12 Nov 2019 11:19:42 +0100
 
+python-xapp (1.6.0-1~ubuntuReleaseName0) ubuntuReleaseName; urgency=medium
+
+  * New upstream release
+
+ -- embrosyn <embrosyn@netc.eu>  Sat, 05 Oct 2019 19:51:45 +0200
+
 python-xapp (1.6.0) tessa; urgency=medium
 
   * Add GSettingsWidgets and SettingsWidgets (#7)
